--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,24 +6,25 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="14" />
-    
     <uses-permission android:name="android.permission.INTERNET" />
-    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.bandwidth.tv.FullscreenActivity"
+            android:name="com.bandwidth.tv.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_fullscreen"
             android:icon="@drawable/ic_launcher"
-            android:theme="@style/FullscreenTheme">
+            android:label="@string/title_activity_fullscreen"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.bandwidth.tv.SettingsActivity" >
         </activity>
     </application>
 </manifest>
